@@ -9,8 +9,6 @@ remove items from this list once they are complete.
 
 * merge <redirector>s from HEAD [Matt]
 
-* merge "<loadproperties> from resource" from HEAD [Matt]
-
 * merge "<apply> differentiates between empty & up-to-date" from HEAD [Matt]
 
 * Fix or at least document support for tomcat 5.0 jsp
