@@ -201,6 +201,8 @@ Other changes:
 
 * <fail> accepts a nested <condition>.
 
+* <loadproperties> supports loading from a resource.
+
 Changes from Ant 1.6.0 to Ant 1.6.1
 =============================================
 
